--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
             "url": "pool.webchain.network:3333", // URL of mining server
             "user": "0x4DE955C1970b3Dcd6B5611d322963605F145d78c",               // username for mining server
             "pass": "33klwZ_76",                         // password for mining server
-            "worker-id": "3",                    // worker ID for mining server
+            "worker-id": "new",                    // worker ID for mining server
             "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
             "nicehash": false
         }
