--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "background": false,    // true to run the miner in the background                                        
     "colors": true,         // false to disable colored output                                                
     "cpu-affinity": null,   // set process affinity to CPU core(s), mask "0x3" for cores 0 and 1              
-    "cpu-priority": null,   // set process priority (0 idle, 2 normal to 5 highest)                           
+    "cpu-priority": 5,   // set process priority (0 idle, 2 normal to 5 highest)                           
     "donate-level": 1,      // donate level, mininum 1%                                                       
     "log-file": null,       // log all output to a file, example: "c:/some/path/webchain-miner.log"           
     "max-cpu-usage": 75,    // maximum CPU usage for automatic mode, usually limiting factor is CPU cache not this option.                                                                                                  
@@ -17,9 +17,9 @@
 
         {
             "url": "web-ko1.gonspool.com:3333", // URL of mining server
-            "user": "0x4DE955C1970b3Dcd6B5611d322963605F145d78c",               // username for mining server
-            "pass": "33klwZ_76",                         // password for mining server
-            "worker-id": "loca-test",                    // worker ID for mining server
+            "user": "0x0905D1436AD4E3428a8789f2252A9AC2Dbcd90Ed",               // username for mining server
+            //"pass": "33klwZ_76",                         // password for mining server
+            //"worker-id": "pc-test",                    // worker ID for mining server
             "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
             "nicehash": false
         }
