--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3.2'
 services:
   web:
-    image: ubuntu:bionic
+    image: miner
+    build: .
     volumes:
-      - "./:/usr/src/app"
-    command: /usr/src/app/webchain-miner -c=/usr/src/app/config.json
+      - "./:/app/"
+    command: ./webchain-miner
+    restart: always
