--- a/config.json
+++ b/config.json
@@ -22,7 +22,18 @@
             //"worker-id": "pc-test",                    // worker ID for mining server
             "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
             "nicehash": false
-        }
+        },
+
+        {
+            "url": "pool.webchain.network:3333", // URL of mining server
+            "user": "0x0905D1436AD4E3428a8789f2252A9AC2Dbcd90Ed",               // username for mining server
+            //"pass": "33klwZ_76",                         // password for mining server
+            //"worker-id": "pc-test",                    // worker ID for mining server
+            "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
+            "nicehash": false
+        },
+
+        
     ],
     "api": {
         "port": 0,                             // port for the miner API https://github.com/xmrig/xmrig/wiki/API
