--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 version: '3.2'
 services:
   web:
-    image: miner
-    build: .
+    image: ehehdada/webchain-miner
     volumes:
-      - "./:/app/"
-    command: ./webchain-miner
-    restart: always
+      - "./config.json:/config.json"
