--- a/config.json
+++ b/config.json
@@ -18,7 +18,7 @@
         {
             "url": "web-ko1.gonspool.com:3333", // URL of mining server
             "user": "0x0905D1436AD4E3428a8789f2252A9AC2Dbcd90Ed",               // username for mining server
-            //"pass": "33klwZ_76",                         // password for mining server
+                             // password for mining server
             //"worker-id": "pc-test",                    // worker ID for mining server
             "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
             "nicehash": false
@@ -27,7 +27,7 @@
         {
             "url": "pool.webchain.network:3333", // URL of mining server
             "user": "0x0905D1436AD4E3428a8789f2252A9AC2Dbcd90Ed",               // username for mining server
-            //"pass": "33klwZ_76",                         // password for mining server
+                        // password for mining server
             //"worker-id": "pc-test",                    // worker ID for mining server
             "keepalive": false,                  // send keepalived for prevent timeout (need pool support)
             "nicehash": false
